--- a/_columns/The_Big_Picture/zh-cn/2024-11-08.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-08.md
@@ -11,11 +11,11 @@ author: MICHAEL LARKIN
 
 
 The stock market ended a banner week sharply higher on the ebullience surrounding the election victory of Donald Trump. Now a fresh inflation reading and U.S. retail sales data is due.  
-股市在围绕唐纳德·特朗普大选胜利的热情洋溢下大幅走高。现在，新的通胀数据和美国零售销售数据即将公布。
+股市在围绕唐纳德·特朗普大选胜利的热情洋溢下大幅走高。现在，新的通胀数据和美国零售销售数据即将出炉。
 
 
 The Nasdaq composite ended Friday with a slim 0.1% gain. However, the true story was the tech-heavy index's blockbuster weekly lift of 5.7%, the best week since March 2022. It has now risen in eight of the past nine weeks and sits well above its [50-day moving average.](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) The Nasdaq now holds a sizzling year-to-date gain of 28.5%.  
-纳斯达克综合指数周五收盘小幅上涨 0.1%。然而，真实情况是，该以科技股为主的指数每周上涨 5.7%，这是自 2022 年 3 月以来最好的一周。它在过去 9 周中有 8 周上涨，远高于其 [50 天移动平均线。](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)纳斯达克指数今年迄今上涨了 28.5%。
+纳斯达克综合指数周五收盘上涨 0.1%。然而，真实情况是，该以科技股为主的指数每周上涨 5.7%，这是自 2022 年 3 月以来最好的一周。它在过去 9 周中有 8 周上涨，远高于其 [50 天移动平均线。](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)纳斯达克指数今年迄今上涨了 28.5%。
 
 
 
@@ -32,11 +32,12 @@ The Dow Jones Industrial Average tested the 44,000 level and closed at fresh hei
 道琼斯工业平均指数测试了 44,000 点水平，在周五上涨 0.6% 后收于新高。这里的大新闻是 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 首次亮相，因为它取代**了 Intel** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 在备受赞誉的指数中。这是 AI 股票的一次略带耻辱的首次亮相，当天收盘下跌 0.8%。
 
 
-Small caps outperformed on the stock market, with the Russell 2000 rising 0.7% Friday and turning in a muscular 8.7% weekly lift. It was its best week since April 2020. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) jumped 3.2% for the day and surged 11.5% for the week.  
+Small caps outperformed on the stock market, with the Russell 2000 rising 0.7% Friday and turning in a muscular 8.7% weekly lift. It was its best week since April 2020. The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) jumped 3.2% for the day and surged 11.5% for the week.  
+小盘股在股市上表现出色，罗素 2000 指数周五上涨 0.7%，周线上涨 8.7%。这是自 2020 年 4 月以来最好的一周。Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 当天上涨 3.2%，本周飙升 11.5%。
 
 
-Trump Rally Continues, But Inflation Data Looms
------------------------------------------------
+Trump Rally Continues, But Inflation Data Looms特朗普的反弹仍在继续，但通胀数据迫在眉睫
+-------------------------------------------------------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP110824-287x300.jpg)Stocks rallied furiously the past week as the election results removed a key overhang. And with President-elect Trump expected to pursue pro-growth policies, such as loosening policy on dealmaking, further gains could be in store. The latest Fed meeting was also benign.  
@@ -47,7 +48,8 @@ However, the coming week will see a fresh inflation reading, and negative news o
 然而，未来一周将看到新的通胀数据，这方面的负面消息可能会给股市多头暂停的理由。[根据 Econoday 的数据](https://research.investors.com/economic-calendar/)，10 月份的消费者价格指数周三下跌，整体 CPI 同比增长 2.4%。这与之前的读数相同。剔除食品和能源的核心 CPI 预计将保持稳定，年化增长率为 3.3%。
 
 
-Producer price index data will be released Thursday, with economists expecting a year-over-year gain of 1.8% in the headline data. Other noteworthy economic reports include U.S. retail sales data, which drops Friday. This should give additional insight into the health of the all-important American consumer.  
+Producer price index data will be released Thursday, with economists expecting a year-over-year gain of 1.8% in the headline data. Other noteworthy economic reports include U.S. retail sales data, which drops Friday. This should give additional insight into the health of the all-important American consumer.  
+生产者价格指数数据将于周四公布，经济学家预计整体数据同比增长 1.8%。其他值得注意的经济报告包括美国零售销售数据，该数据周五下降。这应该可以更深入地了解最重要的美国消费者的健康状况。
 
 
 There are also a few [noteworthy earnings reports in the coming week](https://www.investors.com/research/earnings-preview/cava-stock-shopify-cisco-systems-rally-earnings-reports/). These include [Leaderboard Watchlist](https://get.investors.com/leaderboard/) name **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)), **Cisco Systems** ([CSCO](https://research.investors.com/quote.aspx?symbol=CSCO)) and **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)).  
