--- a/_columns/The_Big_Picture/zh-cn/2024-11-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-12.md
@@ -48,7 +48,8 @@ Volume was lower on both main exchanges. Decliners beat advancers on the Nasdaq 
 两个主要交易所的成交量都较低。下跌的股票以略高于 2 比 1 的比分击败了纳斯达克的上涨股票。纽约证券交易所的广度更差，接近 4 比 1。
 
 
-On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
+On a day that saw the market-cap weighted S&P 500 drop 0.3%, the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) confirmed the weak breadth with a decline of 0.8%. The homepage of [MarketSurge.com](https://marketsurge.investors.com) showed 166 stocks rose in heavy volume, while 756 fell in strong turnover.  
+在市值加权标准普尔 500 指数下跌 0.3% 的一天，景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 以下跌 0.8% 确认了疲软的广度。[MarketSurge.com](https://marketsurge.investors.com) 的主页显示，166 只股票大幅上涨，而 756 只股票成交量强劲。
 
 
 
@@ -99,7 +100,7 @@ Patience For Now 暂时的耐心
 
 
 Patience is a virtue for now. In the meantime, keep close tabs on your winners. If they're pulling back in light volume and finding support at key levels, there's nothing to do. But if volume starts to pick up to the downside, treat your winners with care and don't be afraid to take partial or even full profits.  
-耐心目前是一种美德。同时，密切关注您的获胜者。如果他们在低音量下撤并在关键水平上寻找支撑，那就无能为力。但是，如果交易量开始回升至下行趋势，请小心对待您的赢家，不要害怕获得部分甚至全部利润。
+耐心目前是一种美德。同时，密切关注您的获胜者。如果他们在低音量下撤并在关键水平上寻找支撑，那就无能为力。但是，如果交易量开始回升至下行，请小心对待您的赢家，不要害怕获得部分甚至全部利润。
 
 
 Stock market bulls wouldn't mind seeing an orderly, low-volume pullback from here. If it comes to fruition, it shouldn't take long for new buys to present themselves. For now, avoid chasing the big leaders that are well extended from proper entries. That's an easy way to lose money.  
