--- a/_columns/The_Big_Picture/zh-cn/2024-11-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-13.md
@@ -40,32 +40,26 @@ Indexes opened higher after the October consumer price index [met economists' fo
 在 10 月消费者价格指数[达到经济学家的预测](https://www.investors.com/news/economy/cpi-inflation-oct-ppi-federal-reserve-sp-500/)后，指数开盘走高。降温趋势似乎停滞不前。但债券交易员仍然提高了对下个月降息 25 个基点的押注。周三晚些时候[，这种降息的几率](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)为 82%，高于周二的约 59%。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/11/MP111324.jpg)Despite the stock market's moderating trend, the S&P 500 is up 4.9% this month and just had its best nine-day performance since August. The Nasdaq's 6.3% gain month-to-date is a nine-day best since September, according to Dow Jones Market Data.  
-尽管股市呈缓和趋势，但标准普尔 500 指数本月上涨了 4.9%，刚刚创下自 8 月以来最好的 9 天表现。根据道琼斯市场数据，纳斯达克指数本月迄今上涨 6.3%，是自 9 月以来的 9 天最佳水平。
+![](https://www.investors.com/wp-content/uploads/2024/11/MP111324.jpg)Despite the stock market's moderating trend, the S&P 500 is up 4.9% this month and just had its best nine-day performance since August. The Nasdaq's 6.3% gain month-to-date is a nine-day best since September, according to Dow Jones Market Data.  
 
 
-The fact that the stock market has hardly budged since last week's rally should be taken as a positive sign.  
-自上周的反弹以来，股市几乎没有变化，这一事实应该被视为一个积极的信号。
+The fact that the stock market has hardly budged since last week's rally should be taken as a positive sign.  
 
 
-While indexes were relatively quiet, many high-rated stocks rose sharply in higher volume during the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), **Paymentus** ([PAY](https://research.investors.com/quote.aspx?symbol=PAY)) and **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)). Cava's winnings were pared substantially by the close.  
-虽然指数相对平静，但许多高评级股票在盘中大幅上涨，包括 **Cava** （[CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)）、**Paymentus** （[PAY](https://research.investors.com/quote.aspx?symbol=PAY)） 和 **Shopify** （[SHOP）。](https://research.investors.com/quote.aspx?symbol=SHOP)Cava 的奖金在收盘时大幅减少。
+While indexes were relatively quiet, many high-rated stocks rose sharply in higher volume during the session, including **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)), **Paymentus** ([PAY](https://research.investors.com/quote.aspx?symbol=PAY)) and **Shopify** ([SHOP](https://research.investors.com/quote.aspx?symbol=SHOP)). Cava's winnings were pared substantially by the close.  
 
 
-Stock Market Sentiment Bubbling股市情绪冒泡
--------------------------------------
+Stock Market Sentiment Bubbling
+-------------------------------
 
 
-Investor optimism has bulged since last week's U.S. elections removed a big uncertainty and raised the prospects for more business-friendly policies in Washington.  
-自上周美国大选消除巨大不确定性并提高华盛顿出台更有利于商业政策的前景以来，投资者的乐观情绪不断上升。
+Investor optimism has bulged since last week's U.S. elections removed a big uncertainty and raised the prospects for more business-friendly policies in Washington.  
 
 
-The [put-call volume ratio](https://research.investors.com/psychological-market-indicators/chart?type=putcall) fell to 0.59 on Monday, the lowest — and most optimistic — reading so far this year. The [Cboe Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, on Wednesday fell for the sixth time in the past seven sessions. The so-called stock market fear gauge is at the lowest since July 23.  
-[周一，看跌期权与看涨期权的成交量比率](https://research.investors.com/psychological-market-indicators/chart?type=putcall)降至 0.59，这是今年迄今为止最低也是最乐观的读数。芝加哥[期权交易所波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility) （VIX） 周三在过去七个交易日中第六次下跌。所谓的股市恐惧指标处于 7 月 23 日以来的最低水平。
+The [put-call volume ratio](https://research.investors.com/psychological-market-indicators/chart?type=putcall) fell to 0.59 on Monday, the lowest — and most optimistic — reading so far this year. The [Cboe Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), or VIX, on Wednesday fell for the sixth time in the past seven sessions. The so-called stock market fear gauge is at the lowest since July 23.  
 
 
-A Charles Schwab survey found that retail investors and active traders are significantly more bullish than they were in late October. A survey of Schwab clients conducted after the Nov. 7 Fed rate cut shows 56% are bullish and 15% are bearish about equities. In late October, 36% were bullish and 20% were bearish. Among active traders, 29% in the survey said they plan to add risk before the end of the year.  
-嘉信理财 （Charles Schwab） 的一项调查发现，散户投资者和活跃的交易员明显比 10 月下旬更加看涨。11 月 7 日美联储降息后对嘉信理财客户进行的一项调查显示，56% 的客户看涨，15% 的客户看跌股票。10 月下旬，36% 的受访者看涨，20% 的受访者看跌。在活跃的交易者中，29% 的调查表示他们计划在年底前增加风险。
+A Charles Schwab survey found that retail investors and active traders are significantly more bullish than they were in late October. A survey of Schwab clients conducted after the Nov. 7 Fed rate cut shows 56% are bullish and 15% are bearish about equities. In late October, 36% were bullish and 20% were bearish. Among active traders, 29% in the survey said they plan to add risk before the end of the year.  
 
 
 The Investors Intelligence Advisors Sentiment report, which tracks market newsletters, saw the number of bullish advisors climb to 60.3% from 56.7% a week ago. That level indicates a complacent market that could be in for a pullback.  
