--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-13.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-13.md
@@ -50,16 +50,20 @@ Flutter raised its full-year revenue guidance by 1% and is now forecasting 22% g
 Flutter 将其全年收入指引上调了 1%，现在预测中点增长 22%。然而，该公司将其美国收入指引下调了 1%;它现在预计中点为 61.5 亿美元。
 
 
-FactSet analysts see full-year revenue rising about 20% to $14.13 billion.  
+FactSet analysts see full-year revenue rising about 20% to $14.13 billion.  
+FactSet 分析师预计全年收入将增长约 20%，达到 141.3 亿美元。
 
 
-Flutter also raised its adjusted EBITDA guidance by 1% to 35% at the midpoint.  
+Flutter also raised its adjusted EBITDA guidance by 1% to 35% at the midpoint.  
+Flutter 还将其调整后的 EBITDA 指引中点上调了 1% 至 35%。
 
 
-Analysts appear convinced that Flutter is well-positioned to capitalize on the growing sports betting market with [expectations that Flutter earnings will soar 400% by 2028](https://www.investors.com/research/the-new-america/fanduel-investors-flutter-entertainment-better-bet-draftkings/).  
+Analysts appear convinced that Flutter is well-positioned to capitalize on the growing sports betting market with [expectations that Flutter earnings will soar 400% by 2028](https://www.investors.com/research/the-new-america/fanduel-investors-flutter-entertainment-better-bet-draftkings/).  
+分析师似乎相信 Flutter 有能力利用不断增长的体育博彩市场，[预计到 2028 年，Flutter 的收入将飙升 400%。](https://www.investors.com/research/the-new-america/fanduel-investors-flutter-entertainment-better-bet-draftkings/)
 
 
-Needham on Wednesday raised its price target on FLUT stock to 300 from 270 and kept a buy rating on shares, according to The Fly. The firm noted the company's U.S. results for the quarter were better than feared, with management citing Flutter's "best in class" risk and trading.  
+Needham on Wednesday raised its price target on FLUT stock to 300 from 270 and kept a buy rating on shares, according to The Fly. The firm noted the company's U.S. results for the quarter were better than feared, with management citing Flutter's "best in class" risk and trading.  
+据 The Fly 报道，Needham 周三将 FLUT 股票的目标价从 270 上调至 300，并维持对股票的买入评级。该公司指出，该公司本季度在美国的业绩好于预期，管理层称 Flutter 的风险和交易为“同类最佳”。
 
 
 Benchmark said the results showcased strong performance with U.S. market dominance and steady growth in international markets. Flutter is well-positioned for sustained growth while its cash flow generation remains a "Benchmark Top Idea," the firm wrote. Benchmark lifted its price target on Flutter stock to 275 from 265 and maintained a buy rating.  
@@ -146,11 +150,11 @@ Shares of the FanDuel parent are up 16% so far this year through Tuesday's close
 
 
 Elsewhere, rival **DraftKings** ([DKNG](https://research.investors.com/quote.aspx?symbol=DKNG)) climbed 1.5% Wednesday. DKNG shares are consolidating with a 49.57 buy point as [DraftKings last week missed Q3 estimates](https://www.investors.com/news/draftkings-stock-q3-earnings-miss-lowered-outlook/) and lowered its outlook.  
-在其他地方，竞争对手 **DraftKings** （[DKNG）](https://research.investors.com/quote.aspx?symbol=DKNG) 周三上涨了 1.5%。DKNG 股价盘整，买入点为 49.57，因为 [DraftKings 上周未达到第三季度的预期](https://www.investors.com/news/draftkings-stock-q3-earnings-miss-lowered-outlook/)并下调了其前景。
+在其他地方，竞争对手 **DraftKings** （[DKNG）](https://research.investors.com/quote.aspx?symbol=DKNG) 周三上涨了 1.5%。DKNG 股价盘整，买入点为 49.57，因为 [DraftKings 上周低于第三季度预期](https://www.investors.com/news/draftkings-stock-q3-earnings-miss-lowered-outlook/)并下调了其前景。
 
 
 DraftKings stock has gained about 20% so far this year.  
-DraftKings 股票今年迄今已上涨约 20%。
+DraftKings 的股票今年迄今已上涨约 20%。
 
 
 *You can follow Harrison Miller for more stock news and updates on X/Twitter [@IBD\_Harrison](https://twitter.com/IBD_Harrison)  
