--- a/_columns/Stock_Of_the_Day/zh-cn/2024-11-14.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-11-14.md
@@ -50,14 +50,16 @@ Costco 下次报告将于 12 月公布。该公司以仓库购物而闻名，这
 
 
 
-Costco Stock Pullback Opportunity
----------------------------------
+Costco Stock Pullback OpportunityCostco 股票回调机会
+----------------------------------------------
 
 
-Shares of Costco dipped 1.1% to 923.89 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). A recent pullback has returned Costco stock to just above a 923.83 flat-base [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The base rides neatly on support at the chart's 50-day moving average.  
+Shares of Costco dipped 1.1% to 923.89 on the [stock market today](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/). A recent pullback has returned Costco stock to just above a 923.83 flat-base [buy point](https://www.investors.com/ibd-university/how-to-buy/), according to [MarketSurge pattern recognition](https://marketsurge.investors.com). The base rides neatly on support at the chart's 50-day moving average.  
+Costco 的股价[今天在股市](https://www.investors.com/research/stock-market-data-dow-jones-sp-500-nasdaq-spdr-etfs/)上下跌 1.1% 至 923.89。根据 [MarketSurge 模式识别](https://marketsurge.investors.com)，最近的回调使 Costco 股票回到略高于 923.83 的平底[买入点](https://www.investors.com/ibd-university/how-to-buy/)。该基础巧妙地支撑在图表的 50 天移动平均线的支撑位上。
 
 
-IBD added COST stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Nov. 8 as it broke out to record highs. Shares of the long-term retail stock winner are in buy range to 970.02.  
+IBD added COST stock to [Leaderboard](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) on Nov. 8 as it broke out to record highs. Shares of the long-term retail stock winner are in buy range to 970.02.  
+IBD 于 11 月 8 日将 COST 股票添加到[排行榜](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)上，因为它突破了历史新高。长期零售股赢家的股价处于买入区间至 970.02。
 
 
 
