--- a/_columns/The_Big_Picture/zh-cn/2024-11-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-14.md
@@ -104,7 +104,7 @@ As the stock market pulls back, the environment continues to require diligent [r
 
 
 [IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, which makes sense given the session's broad-based weakness. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)).  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中没有新股，鉴于该交易日的广泛疲软，这是有道理的。同时，Near Pivot 列表中只有两个股票观点，一个是 **Meta Platforms** （[META）。](https://research.investors.com/quote.aspx?symbol=META)
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中没有新股，考虑到该时段的广泛疲软，这是有道理的。同时，Near Pivot 列表中只有两个股票观点，一个是 **Meta Platforms** （[META）。](https://research.investors.com/quote.aspx?symbol=META)
 
 
 
