--- a/_columns/The_Big_Picture/zh-cn/2024-11-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-13.md
@@ -77,7 +77,7 @@ The Investors Intelligence Advisors Sentiment report, which tracks market newsle
 
 
 The latest bears reading fell to 20.7%, from 21.7%. "That is the fewest bears since early August but a further contraction for this reading is typically seen before a major market top," the firm noted.  
-最新的空头读数从 21.7% 降至 20.7%。该公司指出：“这是自 8 月初以来最少的空头，但通常在主要市场顶部之前看到该读数的进一步收缩。
+最新的空头读数从 21.7% 降至 20.7%。“这是自 8 月初以来最少的空头，但通常在主要市场顶部之前看到该读数的进一步收缩，”该公司指出。
 
 
 FOMO Tempts Investors FOMO 吸引投资者
