--- a/_columns/The_Big_Picture/zh-cn/2024-11-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-14.md
@@ -36,8 +36,7 @@ On Thursday afternoon, Powell said that U.S. economic strength will allow the ce
 鲍威尔说：“经济没有发出任何信号，表明我们需要急于降低利率。“我们目前在经济中看到的实力使我们能够谨慎地做出决策。”
 
 
-Bond traders [scaled back the chances for a December rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html). Odds for a quarter-point reduction fell to 62.1% from 82.5% on Wednesday. Yet the 10-year Treasury yield fell two basis points to 4.42% in late-afternoon trading.  
-债券交易员[缩减了 12 月降息的机会](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)。降息 25 个百分点的赔率从周三的 82.5% 降至 62.1%。然而，10 年期美国国债收益率在午后交易中下跌 2 个基点至 4.42%。
+Bond traders [scaled back the chances for a December rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html). Odds for a quarter-point reduction fell to 62.1% from 82.5% on Wednesday. Yet the 10-year Treasury yield fell two basis points to 4.42% in late-afternoon trading.  
 
 
 
@@ -79,8 +78,7 @@ Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.asp
 ---
 
 
-[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth  
-英伟达是谁？精明的投资者对这个 AI 庞然大物爱不释手**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/)
+[**Nvidia Who? Savvy Investors Can't Get Enough Of This AI Behemoth**](https://www.investors.com/research/ibd-stock-analysis/broadcom-stock-avgo-nvidia-best-mutual-funds/) 
 
 
 
@@ -88,23 +86,20 @@ Meanwhile, the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.asp
 ---
 
 
-What Investors Should Do Now投资者现在应该做什么
---------------------------------------
+What Investors Should Do Now
+----------------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP111424-229x300.jpg)
 
 
-IBD maintained its recommended exposure level at 80%-100%.  
-IBD 将其建议的暴露水平保持在 80%-100%。
+IBD maintained its recommended exposure level at 80%-100%.  
 
 
-As the stock market pulls back, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
-随着股市的回落，环境继续需要勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。确保您监控您的行为不合时宜的头寸，并出售任何触发卖出规则的股票。
+As the stock market pulls back, the environment continues to require diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). Make sure you monitor your positions that are acting out of character and sell any stocks that trigger sell rules.  
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, which makes sense given the session's broad-based weakness. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)).  
-[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中没有新股，考虑到该时段的广泛疲软，这是有道理的。同时，Near Pivot 列表中只有两个股票观点，一个是 **Meta Platforms** （[META）。](https://research.investors.com/quote.aspx?symbol=META)
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured no new stocks, which makes sense given the session's broad-based weakness. Meanwhile, the Near Pivot list has only two stock ideas on it, and one is **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)).  
 
 
 
@@ -112,8 +107,7 @@ As the stock market pulls back, the environment continues to require diligent [r
 ---
 
 
-[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems  
-这个行业集团 — 以及 4 家 IPO — 打磨了 20 颗“完美”的宝石**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**This Industry Group — And 4 IPOs — Polish 20 'Perfect' Gems**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/) 
 
 
 
@@ -121,33 +115,27 @@ As the stock market pulls back, the environment continues to require diligent [r
 ---
 
 
-Stock Market Leaders To Watch: Heico, Meta, On值得关注的股市领导者：Heico、Meta、On
-----------------------------------------------------------------------
+Stock Market Leaders To Watch: Heico, Meta, On
+----------------------------------------------
 
 
-Leaders to watch include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), Magnificent Seven stock Meta and retail leader **On Holdings** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)).  
-值得关注的领导者包括 **Heico** （[HEI](https://research.investors.com/quote.aspx?symbol=HEI)）、Magnificent Seven 股票 Meta 和零售领导者 **On Holdings** （[ONON）。](https://research.investors.com/quote.aspx?symbol=ONON)
+Leaders to watch include **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)), Magnificent Seven stock Meta and retail leader **On Holdings** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)).  
 
 
 
-Aerospace leader Heico added to Wednesday's breakout move with a 1.1% rally. Shares are in buy range above a flat base's 269.38 buy point.  
-航空航天领导者 Heico 以 1.1% 的涨幅增加了周三的突破走势。股价处于平坦底部 269.38 买入点上方的买入区间。
+Aerospace leader Heico added to Wednesday's breakout move with a 1.1% rally. Shares are in buy range above a flat base's 269.38 buy point.  
 
 
-Meta stock dipped Thursday, closing just 4% away from a 602.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) in a flat base.  
-Meta 股票周四下跌，收盘价仅为 4%，距离 602.95 [的买入点](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)持平。
+Meta stock dipped Thursday, closing just 4% away from a 602.95 [buy point](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) in a flat base.  
 
 
-Footwear leader On Holding held above a 52.80 buy point in a flat base Thursday. The stock's RS line is approaching new highs.  
-鞋类领导者 On Holding 周四持平，保持在 52.80 买入点上方。该股的 RS 线正在接近新高。
+Footwear leader On Holding held above a 52.80 buy point in a flat base Thursday. The stock's RS line is approaching new highs.  
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111424.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111424.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111424.pdf).  
 
 
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
-请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.* 
 
 
 
