--- a/_columns/Swing_Trading/zh-cn/2024-11-15.md
+++ b/_columns/Swing_Trading/zh-cn/2024-11-15.md
@@ -64,7 +64,7 @@ But remember the goal isn't to sell at the top. The goal is to make as much mone
 
 
 Ultimately, IGV closed poorly after gapping up and we took the opportunity to reduce another quarter position. When IGV fell more the next day **(5)**, we removed the remaining position. Our earlier sells were at higher prices and on the way up making the drawdown on IGV very slight.  
-最终，IGV 在跳空后收盘不佳，我们借此机会又减少了四分之一的位置。当 IGV 在第二天 **（5）** 下跌更多时，我们删除了剩余的位置。我们早期的卖出价格较高，并且正在上涨，这使得 IGV 的回撤非常轻微。
+最终，IGV 在跳空后收盘不佳，我们借此机会再次缩小了四分之一的位置。当 IGV 在第二天 **（5）** 下跌更多时，我们删除了剩余的位置。我们早期的卖出价格较高，并且正在上涨，这使得 IGV 的回撤非常轻微。
 
 
 As much as the first sell might have hurt as IGV gapped up, it looked much better as IGV continued to fall on Friday **(6)**. As a swing trading rule, selling into strength is critical for keeping more of what you earn.  
